fixed spacing for mobile MVP complete

--- a/css/index.css
+++ b/css/index.css
@@ -226,6 +226,7 @@ footer {
 @media (max-width:500px) {
   .home .space-images img {
     width: 100%;
+    margin: 20px 5%;
   }
 }
 .home .visit-planets {
@@ -247,7 +248,8 @@ footer {
 @media (max-width:500px) {
   .home .walk {
     flex-direction: column;
-    padding-top: 20px;
+    margin-top: 5%;
+    padding: 5% 5%;
   }
 }
 .home .walk .walk-text {
@@ -255,6 +257,7 @@ footer {
 }
 @media (max-width:500px) {
   .home .walk .walk-text {
+    padding-top: 5%;
     width: 100%;
   }
 }
@@ -264,11 +267,6 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
-@media (max-width:500px) {
-  .home .walk .walk-text .btn {
-    width: 100%;
-  }
-}
 .home .walk .walk-text button {
   background-color: #22283A;
   color: White;
@@ -276,12 +274,24 @@ footer {
   font-size: 1.8rem;
   border-radius: 5px;
 }
+@media (max-width:500px) {
+  .home .walk .walk-text button {
+    display: block;
+    width: 100%;
+    padding: 6% 0;
+  }
+}
 .home .walk .walk-text button:hover {
   background-color: white;
   color: #22283A;
   padding: 5px 15px;
   font-size: 1.8rem;
   border-radius: 5px;
+}
+@media (max-width:500px) {
+  .home .walk .walk-text button:hover {
+    padding: 6% 0;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
@@ -291,6 +301,7 @@ footer {
   .home .walk .walk-img {
     order: -1;
     width: 100%;
+    margin: 0;
   }
 }
 .home .walk .walk-img img {
