--- a/less/home-page.less
+++ b/less/home-page.less
@@ -42,6 +42,7 @@
 
       @media @phone {
         width: 100%;
+        margin: 20px 5%;
       }
     }
   }
@@ -67,13 +68,15 @@
 
     @media @phone {
       flex-direction: column;
-      padding-top: 20px;
+      margin-top: 5%;
+      padding: 5% 5%;
     }
 
     .walk-text {
       width: 50%;
 
       @media @phone {
+        padding-top: 5%;
         width: 100%;
       }
 
@@ -85,19 +88,22 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-
-        @media @phone {
-          width: 100%;
-        }
-      }
-
       button {
         .sign-up();
+        
+        @media @phone {
+          display: block;
+          width: 100%;
+          padding: 6% 0;
+        }
       }
 
       button:hover {
         .sign-up(white, @btn-bg-color);
+
+        @media @phone {
+          padding: 6% 0;
+        }
       }
     }
 
@@ -108,6 +114,7 @@
       @media @phone {
         order: -1;
         width: 100%;
+        margin: 0;
       }
       
       img {
